bindings/py/bgfx.py

	bgfx_set_view_mode = lib.bgfx_set_view_mode
	bgfx_set_view_mode.argtypes = [ctypes.c_uint16, ctypes.c_int]
	bgfx_set_view_mode.restype = None
	global bgfx_set_view_frame_buffer
	bgfx_set_view_frame_buffer = lib.bgfx_set_view_frame_buffer
	bgfx_set_view_frame_buffer.argtypes = [ctypes.c_uint16, FrameBufferHandle]
	bgfx_set_view_frame_buffer.restype = None
	global bgfx_set_view_transform
	bgfx_set_view_transform = lib.bgfx_set_view_transform
	bgfx_set_view_transform.argtypes = [ctypes.c_uint16, ctypes.c_void_p, ctypes.c_void_p]
	bgfx_set_view_transform.restype = None
	global bgfx_set_view_order
	bgfx_set_view_order = lib.bgfx_set_view_order
	bgfx_set_view_order.argtypes = [ctypes.c_uint16, ctypes.c_uint16, ctypes.POINTER(ctypes.c_uint16)]
	bgfx_set_view_order.restype = None
	global bgfx_set_view_shading_rate
	bgfx_set_view_shading_rate = lib.bgfx_set_view_shading_rate
	bgfx_set_view_shading_rate.argtypes = [ctypes.c_uint16, ctypes.c_int]
	bgfx_set_view_shading_rate.restype = None
	global bgfx_reset_view
	bgfx_reset_view = lib.bgfx_reset_view
	bgfx_reset_view.argtypes = [ctypes.c_uint16]
	bgfx_reset_view.restype = None
	global bgfx_encoder_begin
	bgfx_encoder_begin = lib.bgfx_encoder_begin
	bgfx_encoder_begin.argtypes = [ctypes.c_bool]
	bgfx_encoder_begin.restype = ctypes.POINTER(Encoder)
	global bgfx_encoder_end
	bgfx_encoder_end = lib.bgfx_encoder_end
	bgfx_encoder_end.argtypes = [ctypes.POINTER(Encoder)]
	bgfx_encoder_end.restype = None
	global bgfx_encoder_set_marker
	bgfx_encoder_set_marker = lib.bgfx_encoder_set_marker
	bgfx_encoder_set_marker.argtypes = [ctypes.POINTER(Encoder), ctypes.c_char_p, ctypes.c_int32]
	bgfx_encoder_set_marker.restype = None
	global bgfx_encoder_set_state
	bgfx_encoder_set_state = lib.bgfx_encoder_set_state
	bgfx_encoder_set_state.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint64, ctypes.c_uint32]
	bgfx_encoder_set_state.restype = None
	global bgfx_encoder_set_condition
	bgfx_encoder_set_condition = lib.bgfx_encoder_set_condition
	bgfx_encoder_set_condition.argtypes = [ctypes.POINTER(Encoder), OcclusionQueryHandle, ctypes.c_bool]
	bgfx_encoder_set_condition.restype = None
	global bgfx_encoder_set_stencil
	bgfx_encoder_set_stencil = lib.bgfx_encoder_set_stencil
	bgfx_encoder_set_stencil.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint32, ctypes.c_uint32]
	bgfx_encoder_set_stencil.restype = None
	global bgfx_encoder_set_scissor
	bgfx_encoder_set_scissor = lib.bgfx_encoder_set_scissor
	bgfx_encoder_set_scissor.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint16, ctypes.c_uint16, ctypes.c_uint16, ctypes.c_uint16]
	bgfx_encoder_set_scissor.restype = ctypes.c_uint16
	global bgfx_encoder_set_scissor_cached
	bgfx_encoder_set_scissor_cached = lib.bgfx_encoder_set_scissor_cached
	bgfx_encoder_set_scissor_cached.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint16]
	bgfx_encoder_set_scissor_cached.restype = None
	global bgfx_encoder_set_transform
	bgfx_encoder_set_transform = lib.bgfx_encoder_set_transform
	bgfx_encoder_set_transform.argtypes = [ctypes.POINTER(Encoder), ctypes.c_void_p, ctypes.c_uint16]
	bgfx_encoder_set_transform.restype = ctypes.c_uint32
	global bgfx_encoder_set_transform_cached
	bgfx_encoder_set_transform_cached = lib.bgfx_encoder_set_transform_cached
	bgfx_encoder_set_transform_cached.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint32, ctypes.c_uint16]
	bgfx_encoder_set_transform_cached.restype = None
	global bgfx_encoder_alloc_transform
	bgfx_encoder_alloc_transform = lib.bgfx_encoder_alloc_transform
	bgfx_encoder_alloc_transform.argtypes = [ctypes.POINTER(Encoder), ctypes.POINTER(Transform), ctypes.c_uint16]
	bgfx_encoder_alloc_transform.restype = ctypes.c_uint32
	global bgfx_encoder_set_uniform
	bgfx_encoder_set_uniform = lib.bgfx_encoder_set_uniform
	bgfx_encoder_set_uniform.argtypes = [ctypes.POINTER(Encoder), UniformHandle, ctypes.c_void_p, ctypes.c_uint16]
	bgfx_encoder_set_uniform.restype = None
	global bgfx_set_view_uniform
	bgfx_set_view_uniform = lib.bgfx_set_view_uniform
	bgfx_set_view_uniform.argtypes = [ctypes.c_uint16, UniformHandle, ctypes.c_void_p, ctypes.c_uint16]
	bgfx_set_view_uniform.restype = None
	global bgfx_set_frame_uniform
	bgfx_set_frame_uniform = lib.bgfx_set_frame_uniform
	bgfx_set_frame_uniform.argtypes = [UniformHandle, ctypes.c_void_p, ctypes.c_uint16]
	bgfx_set_frame_uniform.restype = None
	global bgfx_encoder_set_index_buffer
	bgfx_encoder_set_index_buffer = lib.bgfx_encoder_set_index_buffer
	bgfx_encoder_set_index_buffer.argtypes = [ctypes.POINTER(Encoder), IndexBufferHandle, ctypes.c_uint32, ctypes.c_uint32]
	bgfx_encoder_set_index_buffer.restype = None
	global bgfx_encoder_set_dynamic_index_buffer
	bgfx_encoder_set_dynamic_index_buffer = lib.bgfx_encoder_set_dynamic_index_buffer
	bgfx_encoder_set_dynamic_index_buffer.argtypes = [ctypes.POINTER(Encoder), DynamicIndexBufferHandle, ctypes.c_uint32, ctypes.c_uint32]
	bgfx_encoder_set_dynamic_index_buffer.restype = None
	global bgfx_encoder_set_transient_index_buffer
	bgfx_encoder_set_transient_index_buffer = lib.bgfx_encoder_set_transient_index_buffer
	bgfx_encoder_set_transient_index_buffer.argtypes = [ctypes.POINTER(Encoder), ctypes.POINTER(TransientIndexBuffer), ctypes.c_uint32, ctypes.c_uint32]
	bgfx_encoder_set_transient_index_buffer.restype = None
	global bgfx_encoder_set_vertex_buffer
	bgfx_encoder_set_vertex_buffer = lib.bgfx_encoder_set_vertex_buffer
	bgfx_encoder_set_vertex_buffer.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint8, VertexBufferHandle, ctypes.c_uint32, ctypes.c_uint32]
	bgfx_encoder_set_vertex_buffer.restype = None
	global bgfx_encoder_set_vertex_buffer_with_layout
	bgfx_encoder_set_vertex_buffer_with_layout = lib.bgfx_encoder_set_vertex_buffer_with_layout
	bgfx_encoder_set_vertex_buffer_with_layout.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint8, VertexBufferHandle, ctypes.c_uint32, ctypes.c_uint32, VertexLayoutHandle]
	bgfx_encoder_set_vertex_buffer_with_layout.restype = None
	global bgfx_encoder_set_dynamic_vertex_buffer
	bgfx_encoder_set_dynamic_vertex_buffer = lib.bgfx_encoder_set_dynamic_vertex_buffer
	bgfx_encoder_set_dynamic_vertex_buffer.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint8, DynamicVertexBufferHandle, ctypes.c_uint32, ctypes.c_uint32]
	bgfx_encoder_set_dynamic_vertex_buffer.restype = None
	global bgfx_encoder_set_dynamic_vertex_buffer_with_layout
	bgfx_encoder_set_dynamic_vertex_buffer_with_layout = lib.bgfx_encoder_set_dynamic_vertex_buffer_with_layout
	bgfx_encoder_set_dynamic_vertex_buffer_with_layout.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint8, DynamicVertexBufferHandle, ctypes.c_uint32, ctypes.c_uint32, VertexLayoutHandle]
	bgfx_encoder_set_dynamic_vertex_buffer_with_layout.restype = None
	global bgfx_encoder_set_transient_vertex_buffer
	bgfx_encoder_set_transient_vertex_buffer = lib.bgfx_encoder_set_transient_vertex_buffer
	bgfx_encoder_set_transient_vertex_buffer.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint8, ctypes.POINTER(TransientVertexBuffer), ctypes.c_uint32, ctypes.c_uint32]
	bgfx_encoder_set_transient_vertex_buffer.restype = None
	global bgfx_encoder_set_transient_vertex_buffer_with_layout
	bgfx_encoder_set_transient_vertex_buffer_with_layout = lib.bgfx_encoder_set_transient_vertex_buffer_with_layout
	bgfx_encoder_set_transient_vertex_buffer_with_layout.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint8, ctypes.POINTER(TransientVertexBuffer), ctypes.c_uint32, ctypes.c_uint32, VertexLayoutHandle]
	bgfx_encoder_set_transient_vertex_buffer_with_layout.restype = None
	global bgfx_encoder_set_vertex_count
	bgfx_encoder_set_vertex_count = lib.bgfx_encoder_set_vertex_count
	bgfx_encoder_set_vertex_count.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint32]
	bgfx_encoder_set_vertex_count.restype = None
	global bgfx_encoder_set_instance_data_buffer
	bgfx_encoder_set_instance_data_buffer = lib.bgfx_encoder_set_instance_data_buffer
	bgfx_encoder_set_instance_data_buffer.argtypes = [ctypes.POINTER(Encoder), ctypes.POINTER(InstanceDataBuffer), ctypes.c_uint32, ctypes.c_uint32]
	bgfx_encoder_set_instance_data_buffer.restype = None
	global bgfx_encoder_set_instance_data_from_vertex_buffer
	bgfx_encoder_set_instance_data_from_vertex_buffer = lib.bgfx_encoder_set_instance_data_from_vertex_buffer
	bgfx_encoder_set_instance_data_from_vertex_buffer.argtypes = [ctypes.POINTER(Encoder), VertexBufferHandle, ctypes.c_uint32, ctypes.c_uint32]
	bgfx_encoder_set_instance_data_from_vertex_buffer.restype = None
	global bgfx_encoder_set_instance_data_from_dynamic_vertex_buffer
	bgfx_encoder_set_instance_data_from_dynamic_vertex_buffer = lib.bgfx_encoder_set_instance_data_from_dynamic_vertex_buffer
	bgfx_encoder_set_instance_data_from_dynamic_vertex_buffer.argtypes = [ctypes.POINTER(Encoder), DynamicVertexBufferHandle, ctypes.c_uint32, ctypes.c_uint32]
	bgfx_encoder_set_instance_data_from_dynamic_vertex_buffer.restype = None
	global bgfx_encoder_set_instance_count
	bgfx_encoder_set_instance_count = lib.bgfx_encoder_set_instance_count
	bgfx_encoder_set_instance_count.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint32]
	bgfx_encoder_set_instance_count.restype = None
	global bgfx_encoder_set_texture
	bgfx_encoder_set_texture = lib.bgfx_encoder_set_texture
	bgfx_encoder_set_texture.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint8, UniformHandle, TextureHandle, ctypes.c_uint32]
	bgfx_encoder_set_texture.restype = None
	global bgfx_encoder_set_texture_view
	bgfx_encoder_set_texture_view = lib.bgfx_encoder_set_texture_view
	bgfx_encoder_set_texture_view.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint8, UniformHandle, TextureHandle, ctypes.c_uint16, ctypes.c_uint16, ctypes.c_uint8, ctypes.c_uint8, ctypes.c_uint32]
	bgfx_encoder_set_texture_view.restype = None
	global bgfx_encoder_touch
	bgfx_encoder_touch = lib.bgfx_encoder_touch
	bgfx_encoder_touch.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint16]
	bgfx_encoder_touch.restype = None
	global bgfx_encoder_submit
	bgfx_encoder_submit = lib.bgfx_encoder_submit
	bgfx_encoder_submit.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint16, ProgramHandle, ctypes.c_uint32, ctypes.c_uint8]
	bgfx_encoder_submit.restype = None
	global bgfx_encoder_submit_occlusion_query
	bgfx_encoder_submit_occlusion_query = lib.bgfx_encoder_submit_occlusion_query
	bgfx_encoder_submit_occlusion_query.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint16, ProgramHandle, OcclusionQueryHandle, ctypes.c_uint32, ctypes.c_uint8]
	bgfx_encoder_submit_occlusion_query.restype = None
	global bgfx_encoder_submit_indirect
	bgfx_encoder_submit_indirect = lib.bgfx_encoder_submit_indirect
	bgfx_encoder_submit_indirect.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint16, ProgramHandle, IndirectBufferHandle, ctypes.c_uint32, ctypes.c_uint32, ctypes.c_uint32, ctypes.c_uint8]
	bgfx_encoder_submit_indirect.restype = None
	global bgfx_encoder_submit_indirect_count
	bgfx_encoder_submit_indirect_count = lib.bgfx_encoder_submit_indirect_count
	bgfx_encoder_submit_indirect_count.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint16, ProgramHandle, IndirectBufferHandle, ctypes.c_uint32, IndexBufferHandle, ctypes.c_uint32, ctypes.c_uint32, ctypes.c_uint32, ctypes.c_uint8]
	bgfx_encoder_submit_indirect_count.restype = None
	global bgfx_encoder_set_compute_index_buffer
	bgfx_encoder_set_compute_index_buffer = lib.bgfx_encoder_set_compute_index_buffer
	bgfx_encoder_set_compute_index_buffer.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint8, IndexBufferHandle, ctypes.c_int]
	bgfx_encoder_set_compute_index_buffer.restype = None
	global bgfx_encoder_set_compute_vertex_buffer
	bgfx_encoder_set_compute_vertex_buffer = lib.bgfx_encoder_set_compute_vertex_buffer
	bgfx_encoder_set_compute_vertex_buffer.argtypes = [ctypes.POINTER(Encoder), ctypes.c_uint8, VertexBufferHandle, ctypes.c_int]
	bgfx_encoder_set_compute_vertex_buffer.restype = None
	global bgfx_encoder_set_compute_dynamic_index_buffer
	bgfx_encoder_set_compute_dynamic_index_buffer = lib.bgfx_encoder_set_compute_dynamic_index_buffer
